# discord-bot

./: README.md  pyproject.toml
src/discord_bot/: bot.py  config.py  run.py
src/discord_bot/commands/: __init__.py  chat.py  music.py
src/discord_bot/logic/: chat.py  music.py
src/discord_bot/models/chat/: chat_message.py  message_attachment.py  message_sender.py
src/discord_bot/models/music/: music_session.py  song.py
src/discord_bot/utils/: chat.py  discord.py  music.py  spotify.py  youtube.py
systemd-unit/: discord-bot.service
