[project]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Edward Kang"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "openai (>=1.78.0,<2.0.0)",
    "spotipy (>=2.25.1,<3.0.0)",
    "yt-dlp (>=2025.4.30,<2026.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "discord-py[voice] (>=2.5.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "discord_bot", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
